gitlab/gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  ports:
    - name: ssh
      protocol: TCP
      port: 22
    - name: https
      protocol: TCP
      port: 443
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
spec:
  serviceName: gitlab
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      hostname: gitlab.test.epapyrus.com
      containers:
        - name: gitlab
          image: 010438473788.dkr.ecr.ap-northeast-2.amazonaws.com/gitlab-ee:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 22
            - containerPort: 443
          volumeMounts:
            - name: storage
              mountPath: /var/opt/gitlab
              subPath: ./var/opt/gitlab
            - name: storage
              mountPath: /var/log/gitlab
              subPath: ./var/log/gitlab
            - name: storage
              mountPath: /etc/gitlab
              subPath: ./etc/gitlab
            - name: shmdir
              mountPath: /dev/shm
      volumes:
        - name: shmdir
          emptyDir:
            medium: Memory
            sizeLimit: 256M
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 20Gi
