gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gitlab.epapyrus.com
    secretName: gitlab-tls
  rules:
  - host: gitlab.epapyrus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 443
